force-app/main/default/objects/malive__MALiveSummaryStopRelationshipConfig__c/malive__MALiveSummaryStopRelationshipConfig__c.object-meta.xml
<CustomObject>
    <label>MA Live Summary Stop Relationship Config</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>MA Live Summary Stop Relationship Config</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MA Live Summary Stop Relationship Config</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>