force-app/main/default/objects/malive__MALiveSummaryStopRelationshipConfig__c/fields/malive__Distance__c.field-meta.xml
<CustomField>
    <fullName>malive__Distance__c</fullName>
    <label>Distance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>