force-app/main/default/objects/malive__MALiveSummaryStopRelationshipConfig__c/fields/malive__LookupFieldName__c.field-meta.xml
<CustomField>
    <fullName>malive__LookupFieldName__c</fullName>
    <label>Lookup Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>