force-app/main/default/objects/malive__MALiveSummaryStopRelationshipConfig__c/fields/malive__MALiveDailySummaryConfiguration__c.field-meta.xml
<CustomField>
    <fullName>malive__MALiveDailySummaryConfiguration__c</fullName>
    <label>MA Live Daily Summary Configuration</label>
    <referenceTo>malive__MALiveDailySummaryConfig__c</referenceTo>
    <relationshipLabel>MA Live Summary Stop Relationship Config</relationshipLabel>
    <relationshipName>MALiveSummaryStopRelationshipConfig</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>