force-app/main/default/objects/malive__MALiveSummaryStopRelationshipConfig__c/fields/malive__MarkerLayer__c.field-meta.xml
<CustomField>
    <fullName>malive__MarkerLayer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marker Layer</label>
    <referenceTo>sma__MASavedQry__c</referenceTo>
    <relationshipLabel>MA Live Summary Stop Relationship Config</relationshipLabel>
    <relationshipName>MALiveSummaryStopRelationshipConfig</relationshipName>
    <type>Lookup</type>
</CustomField>